
################################################################################
################################################################################




[package]

name = "hyper-dummy-server"

version = "0.6.0"
publish = false

edition = "2021"
resolver = "2"
rust-version = "1.75"

authors = [
	"Ciprian Dorin Craciun <ciprian@volution.ro>",
]
license = "MIT"

description = "Simple do nothing dummy hyper HTTP server."
keywords = []
categories = []

homepage = "https://github.com/console9/hyper-dummy-server"
repository = "https://github.com/console9/hyper-dummy-server"
documentation = "https://docs.rs/hyper-dummy-server"

autobins = false
autoexamples = false
autotests = false
autobenches = false




[lib]

name = "hyper_dummy_server"
path = "./lib.rs"

test = false
bench = false
doctest = false




[[bin]]

name = "hyper-dummy-server"
path = "./bin.rs"

test = false
bench = false
doctest = false




################################################################################
################################################################################




[features]

# meta
default = ["hss-full"]
minimal = [
	"hss-main",
	"hss-cli",
	"hss-server-http1",
	"hss-handler",
	"hss-exports",
	"hss-extensions",
]

# meta
hss-full = ["hyper-simple-server/hss-full"]
hss-full-http1 = ["hyper-simple-server/hss-full-http1"]
hss-full-http2 = ["hyper-simple-server/hss-full-http2"]

# meta
hss-server-full = ["hyper-simple-server/hss-server-full"]
hss-server-http1 = ["hyper-simple-server/hss-server-http1"]
hss-server-http2 = ["hyper-simple-server/hss-server-http2"]

# gate
hss-cli = ["hyper-simple-server/hss-cli"]
hss-exports = ["hyper-simple-server/hss-exports"]
hss-extensions = ["hyper-simple-server/hss-extensions"]
hss-handler = ["hyper-simple-server/hss-handler"]
hss-jemalloc = ["hyper-simple-server/hss-jemalloc"]
hss-mimalloc = ["hyper-simple-server/hss-mimalloc"]
hss-main = ["hyper-simple-server/hss-main"]
hss-resources = ["hyper-simple-server/hss-resources"]
hss-routes = ["hyper-simple-server/hss-routes"]
hss-runtime = ["hyper-simple-server/hss-runtime"]
hss-runtime-mt = ["hyper-simple-server/hss-runtime-mt"]
hss-sanitize = ["hyper-simple-server/hss-sanitize"]
hss-server-debug-jemalloc = ["hyper-simple-server/hss-server-debug-jemalloc"]
hss-server-debug-strace = ["hyper-simple-server/hss-server-debug-strace"]
hss-server-mt = ["hyper-simple-server/hss-server-mt"]
hss-server-sanitize = ["hyper-simple-server/hss-server-sanitize"]
hss-server-profiling = ["hyper-simple-server/hss-server-profiling"]
hss-tls-native = ["hyper-simple-server/hss-tls-native"]
hss-tls-rust = ["hyper-simple-server/hss-tls-rust"]




################################################################################
################################################################################




[dependencies]

hyper-simple-server = { version = "0.6.0", default-features = false, optional = true }




################################################################################
################################################################################




[patch.crates-io]

# hyper-simple-server = { git = "https://github.com/console9/hyper-simple-server", tag = "v0.6.1" }
# hyper-simple-server = { git = "https://github.com/console9/hyper-simple-server", branch = "console9" }
# hyper-simple-server = { git = "https://github.com/console9/hyper-simple-server", branch = "development" }
hyper-simple-server = { path = "../../hyper-simple-server/sources" }

# vrl-errors = { git = "https://github.com/volution/volution-rust-libraries", tag = "v0.1.1" }
# vrl-cli-arguments = { git = "https://github.com/volution/volution-rust-libraries", tag = "v0.1.1" }

# vrl-errors = { git = "https://github.com/volution/volution-rust-libraries", branch = "console9" }
# vrl-cli-arguments = { git = "https://github.com/volution/volution-rust-libraries", branch = "console9" }

vrl-errors = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }
vrl-cli-arguments = { git = "https://github.com/volution/volution-rust-libraries", branch = "development" }

# vrl-errors = { path = "../../volution-rust-libraries/sources/errors" }
# vrl-cli-arguments = { path = "../../volution-rust-libraries/sources/cli-arguments" }




################################################################################
################################################################################




[profile.dev]
incremental = true
codegen-units = 1024
opt-level = 1
lto = "off"
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
split-debuginfo = "packed"
rpath = false
panic = "unwind"


[profile.test]
incremental = true
codegen-units = 1024
opt-level = 1
lto = "off"
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
rpath = false
split-debuginfo = "packed"


[profile.release]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = "none"
debug-assertions = false
overflow-checks = true
strip = "symbols"
split-debuginfo = "packed"
rpath = false
panic = "abort"


[profile.bench]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = "none"
debug-assertions = false
overflow-checks = true
strip = "symbols"
split-debuginfo = "packed"
rpath = false




[profile.dev.package."*"]
incremental = true
codegen-units = 1024
opt-level = 1
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
split-debuginfo = "packed"




[profile.dev.build-override]
incremental = true
codegen-units = 1024
opt-level = 2
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
split-debuginfo = "packed"


[profile.release.build-override]
incremental = true
codegen-units = 1024
opt-level = 2
debug = "none"
debug-assertions = false
overflow-checks = true
strip = "symbols"
split-debuginfo = "packed"




################################################################################
################################################################################

